# Rudis

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  expiry_manager.rs  main.rs  memory.rs  resp.rs  server.rs
src/commands/: command.rs  del.rs  echo.rs  get.rs  info.rs  keys.rs  mget.rs  mod.rs  ping.rs  set.rs
src/utils/: mod.rs  role.rs
