[package]
name = "Rudis"
version = "0.1.0"
authors = ["Alon Lev Shani"]
edition = "2021"

[profile.release]
opt-level = 3                                   # Optimize for size
lto = "fat"                                       # Use "fat" LTO for better optimization
codegen-units = 1                                 # Reduce codegen units for better optimization
panic = "abort"                                   # Don't include unwinding code
overflow-checks = false                           # Don't include overflow checks
debug = false                                     # Don't include debug info
strip = "symbols"                                 # Strip all symbols, not just debug info
incremental = false                               # Disable incremental compilation for smaller binaries


[dependencies]
bytes = "1.3.0"                                    
nom = "8.0.0"
glob = "0.3"